<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.dfki.asr.ajan</groupId>
	<artifactId>ajan-parent</artifactId>
	<version>0.1</version>
	<packaging>pom</packaging>

	<name>Ajan Parent Project</name>
	<modules>
		<module>build-resources</module>
		<module>rdfbeans</module>
		<module>behaviour</module>
		<module>functions</module>
		<module>common</module>
		<module>triplestore</module>
		<module>executionservice</module>
		<module>pluginsystem</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<org.eclipse.rdf4j.version>3.6.3</org.eclipse.rdf4j.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.beust</groupId>
				<artifactId>jcommander</artifactId>
				<version>1.48</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.22</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-runtime</artifactId>
				<version>${org.eclipse.rdf4j.version}</version>
                                <!--<scope></scope>-->
			</dependency>
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>6.9.10</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-core</artifactId>
				<version>1.3</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>3.0.3</version>
					<executions>
						<execution>
							<id>verify</id>
							<phase>verify</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.10.3</version>
					<configuration>
						<doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
						<docletArtifact>
							<groupId>ch.raffael.pegdown-doclet</groupId>
							<artifactId>pegdown-doclet</artifactId>
							<version>1.2.1</version>
						</docletArtifact>
						<useStandardDocletOptions>true</useStandardDocletOptions>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>2.17</version>
					<dependencies>
						<dependency>
							<groupId>${project.groupId}</groupId>
							<artifactId>build-resources</artifactId>
							<version>${project.version}</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<id>validate</id>
							<phase>validate</phase>
							<configuration>
								<configLocation>build-configuration/checkstyle-java-ruleset.xml</configLocation>
								<encoding>UTF-8</encoding>
								<consoleOutput>true</consoleOutput>
								<failsOnError>true</failsOnError>
								<linkXRef>false</linkXRef>
								<includeTestSourceDirectory>true</includeTestSourceDirectory>
							</configuration>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.6</version>
					<dependencies>
						<dependency>
							<groupId>${project.groupId}</groupId>
							<artifactId>build-resources</artifactId>
							<version>${project.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<linkXRef>false</linkXRef>
						<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
						<failOnViolation>true</failOnViolation>
						<targetJdk>1.8</targetJdk>
						<minimumTokens>54</minimumTokens>
						<ignoreLiterals>false</ignoreLiterals>
						<verbose>true</verbose>
						<includeTests>true</includeTests>
						<rulesets>
							<ruleset>build-configuration/pmd-java-ruleset.xml</ruleset>
						</rulesets>
					</configuration>
					<executions>
						<execution>
							<id>validate-pmd</id>
							<phase>validate</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
						<execution>
							<id>validate-cpd</id>
							<phase>validate</phase>
							<goals>
								<goal>cpd-check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<mainClass>${mainClass}</mainClass>
							</manifest>
						</archive>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
